# ag-lang

./: CLAUDE.md  Cargo.toml  README.CN.md  README.md  package-lock.json
crates/ag-ast/: Cargo.toml
crates/ag-ast/src/: lib.rs
crates/ag-checker/: Cargo.toml
crates/ag-checker/src/: lib.rs
crates/ag-cli/: Cargo.toml
crates/ag-cli/src/: main.rs
crates/ag-cli/tests/: e2e.rs
crates/ag-codegen/: Cargo.toml
crates/ag-codegen/src/: lib.rs  tool_schema.rs
crates/ag-dsl-agent/: Cargo.toml
crates/ag-dsl-agent/src/: ast.rs  codegen.rs  handler.rs  lexer.rs  lib.rs  parser.rs  validator.rs
crates/ag-dsl-component/: Cargo.toml
crates/ag-dsl-component/src/: lib.rs  validator.rs
crates/ag-dsl-core/: Cargo.toml
crates/ag-dsl-core/src/: lib.rs  swc_helpers.rs
crates/ag-dsl-prompt/: Cargo.toml
crates/ag-dsl-prompt/src/: ast.rs  codegen.rs  handler.rs  lexer.rs  lib.rs  parser.rs  validator.rs
crates/ag-dsl-server/: Cargo.toml
crates/ag-dsl-server/src/: ast.rs  codegen.rs  handler.rs  lexer.rs  parser.rs  validator.rs
crates/ag-dsl-skill/: Cargo.toml
crates/ag-dsl-skill/src/: ast.rs  lexer.rs  parser.rs  validator.rs
crates/ag-lexer/: Cargo.toml
crates/ag-lexer/src/: lib.rs
crates/ag-parser/: Cargo.toml
crates/ag-parser/src/: lib.rs
crates/ag-stdlib/: Cargo.toml
crates/ag-stdlib/modules/: encoding.ag  env.ag  fs.ag  log.ag
crates/ag-stdlib/src/: lib.rs
examples/http-server/: README.md  app.ag  test-runtime.js
examples/simple-agent/: app.ag  app.js
openspec/changes/agent-dsl-parser/: proposal.md  tasks.md
spec/: lang.md
(+130 files in other folders)
